--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin id="cordova-plugin-outsystems" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
-	<name>
-		PluginOutsystems
-	</name>
+	<name>PluginOutsystems</name>
 	<js-module name="PluginOutsystems" src="www/PluginOutsystems.js">
 		<clobbers target="cordova.plugins.PluginOutsystems" />
 	</js-module>
@@ -14,6 +12,6 @@
 		</config-file>
 		<config-file parent="/*" target="AndroidManifest.xml">
 		</config-file>
-		<source-file src="src/android/PluginOutsystems.java" target-dir="src/cordova/plugin/outsystems/PluginOutsystems" />
+		<source-file src="src/android/PluginOutsystems.java" target-dir="src/cordova-plugin-outsystems/PluginOutsystems" />
 	</platform>
 </plugin>
