--- a/plugin.xml
+++ b/plugin.xml
@@ -7,7 +7,7 @@
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
 			<feature name="PluginOutsystems">
-				<param name="android-package" value="cordova-plugin-outsystems.PluginOutsystems" />
+				<param name="android-package" value="cordova.plugin.outsystems.PluginOutsystems" />
 			</feature>
 		</config-file>
 		<config-file parent="/*" target="AndroidManifest.xml">
